update logic fo adding item in create transaction and update transaction

--- a/.env
+++ b/.env
@@ -16,19 +16,19 @@ LOG_LEVEL=debug
 # DB_USERNAME=root
 # DB_PASSWORD=
 
-# DB_CONNECTION=mysql
-# DB_HOST=192.168.0.190
-# DB_PORT=3306
-# DB_DATABASE=point_of_sales_advance
-# DB_USERNAME=root
-# DB_PASSWORD=casaos
-
 DB_CONNECTION=mysql
-DB_HOST=172.22.0.2
-DB_PORT=3306  # Use the port you mapped in docker-compose.yaml
-DB_DATABASE=point_of_sales_advance  # Replace with your database name
+DB_HOST=192.168.0.190
+DB_PORT=3306
+DB_DATABASE=point_of_sales_advance
 DB_USERNAME=root
-DB_PASSWORD=F!rmansyah999
+DB_PASSWORD=casaos
+
+# DB_CONNECTION=mysql
+# DB_HOST=172.22.0.2
+# DB_PORT=3306  # Use the port you mapped in docker-compose.yaml
+# DB_DATABASE=point_of_sales_advance  # Replace with your database name
+# DB_USERNAME=root
+# DB_PASSWORD=F!rmansyah999
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
