--- a/.env
+++ b/.env
@@ -2,8 +2,8 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:5qJPlh7g/hLnGOf+vlRIJq5f/we1acPehf9y1WSK0nQ=
 APP_DEBUG=false
-# APP_URL=http://pos-app-advance.test
-APP_URL=http://localhost
+APP_URL=http://pos-app-advance.test
+# APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -17,7 +17,7 @@ LOG_LEVEL=debug
 # DB_PASSWORD=
 
 DB_CONNECTION=mysql
-DB_HOST=192.168.0.190
+DB_HOST=192.168.0.200
 DB_PORT=3306
 DB_DATABASE=point_of_sales_advance
 DB_USERNAME=root
